2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-info.pk (pk_info_type): Style sections.

2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd.c (dot_cmds): Add compiler_cmd.
	(pk_cmd_init): Initialize compiler_trie.
	(pk_cmd_shutdown): Free compiler_trie.
	* poke/pk-cmd-compiler.c: New file.
	* poke/Makefile.am (poke_SOURCES): Add pk-cmd-compiler.c
	* libpoke/pkl-ast.c (pkl_ast_format): Initialize the
	string_buffer.
	* poke/pk-help.pk: Add .help topic for the .compiler command.
	* doc/poke.texi (@:.compiler ast): New section.
	(compiler command): Likewise.

2023-10-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl.h: Prototypes for pkl_debug_p, pkl_set_debug_p and
	pkl_get_last_ast_str.
	* libpoke/pkl.c (struct pkl_compiler): New fields debug_p and
	last_ast_str.
	(pkl_new): Initialize debug_p and last_ast_str.
	(pkl_debug_p): New function.
	(pkl_set_debug_p): Likewise.
	(pkl_get_last_ast_str): Likewise.
	(pkl_free): Free last_ast_str.
	(rest_of_compilation): Save printable representation of the ast if
	in debug mode.
	* libpoke/libpoke.h: New services pk_set_debug_p and
	pk_get_debug_ast.
	* libpoke/libpoke.c (pk_set_debug_p): New function.
	(pk_get_debug_ast): Likewise.
	* libpoke/pkl-ast.h: Add prototype of pkl_ast_format.
	* libpoke/pkl-ast.c (pkl_ast_format): New function.
	(pkl_ast_print): Rewrite in terms of pkl_ast_format.
	(pkl_ast_format_1): Rename from pkl_ast_print_1.

2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (print_info_ios): Do not style `size' and
	`bias' entries as offsets.

2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk (pk_settings_dump): Do not emit hyperlinks
	for setting headers, but style it.
	* poke/pk-cmd-set.c (pk_cmd_set_dump): Likewise.

2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.pk (hserver_print_hl): Make it possible to style
	hyperlinks.
	* pickles/pk-table.pk (PK_Table.print_table): Likewise.